# XXGCXY-CampusNet-AutoLogin

./: .gitignore  AUTH_MECHANISM.md  README.md  SPEC.md  create_icon.ps1  index.html  package-lock.json  package.json  xywdl.bat  xywdl.ps1  xywdl.sh
.github/workflows/: build-all.yml  build-linux.yml  build-win-portable.yml  build.yml
src-tauri/: Cargo.toml  build.rs  cargo_err.txt  libwebkit2gtk-4.1-dev_2.50.6-1~deb13u1_amd64.deb  tauri.conf.json
src-tauri/.cargo/: build.ps1  build_coff.py  config.toml  crt_stubs.def  fix_tls_sections.py  gen_vcruntime_lib.py  lld-wrapper.bat  lld_wrapper.py  msvcrt.lib  msvcrt_full.def  msvcrt_new.lib  msvcrt_stubs.def  run_winapi_build.py  run_winapi_build.rs  ucrt_math.def  ucrt_math.lib
src-tauri/.cargo/crt_stubs_src/: Cargo.toml  exit_early.rs  full_stub.rs  lib.rs  no_tls.rs  no_weak_main.rs  stubs.s  temp_lib.rs
src-tauri/.cargo/tls_test/: build_diag.py  build_fresh.py  check_obj.py  exit_early_simple.rs  inspect_pe.py  just_main.rs  link_test.py  quick_test.py  quick_test_fixed.py  run_test.py  test.rs  test_c_tls.c  test_check.rs  test_check2.rs  test_early_exit.rs  test_notls.rs  test_simple_exit.rs  test_sizeofzero.rs  test_tls2.rs  test_tls_exit.rs  test_tls_thread.rs  test_verify_init.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs
