[package]
name = "app"
version = "1.5.5"
description = "校园网自动登录助手"
authors = ["Thatgfsj"]
license = "MIT"
repository = "https://github.com/Thatgfsj/XXGCXY-CampusNet-AutoLogin"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
ping = "0.5"
dirs = "5"
reqwest = { version = "0.11", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.52"
